// -*- Protocol-Buffers -*-
//==============================================================================
/// @file version.proto
/// @brief Obtain information about the service
/// @author Tor Slettnes <tor@slett.net>
//==============================================================================

syntax = "proto3";

package cc.version;

message ComponentVersions
{
    map<string, Version> components = 1;
}

message Version
{
    uint64 major = 1;
    uint64 minor = 2;
    uint64 tweak = 3;
    string printable_version = 8; // Present if different from "major.minor.tweak"

}
